--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 	        <artifactId>slf4j-log4j12</artifactId>
 	        <version>1.7.5</version>
     	</dependency>
+    	
+    	<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.1</version>
+		</dependency>	
  
 	</dependencies>
 	
